added explosive rail

--- a/src/main/resources/assets/stupidthings/lang/en_US.lang
+++ b/src/main/resources/assets/stupidthings/lang/en_US.lang
@@ -3,3 +3,4 @@ itemGroup.tabStupidThings=Stupid Things
 item.anvilChestplate.name=Anvil Chestplate
 
 tile.reverseTNT.name=Reverse TNT
+tile.railExplosive.name=Explosive Rail
