--- a/src/main/resources/assets/stupidthings/lang/en_US.lang
+++ b/src/main/resources/assets/stupidthings/lang/en_US.lang
@@ -27,7 +27,7 @@ item.improved_diamond_hoe.name=Improved Diamond Hoe
 item.firing_can.name=Firing Can
 item.cactus_sword.name=Cactus Sword
 item.worlds_smallest_violin.name=World's Smallest Violin
-item.block_bomb_launcher.name=Block Bomb Launcher
+item.block_bomb_launcher.name=Block Bomb Blaster
 
 tile.reverse_tnt.name=Reverse TNT
 tile.rail_explosive.name=Explosive Rail
