--- a/src/main/resources/assets/stupidthings/lang/zh_cn.lang
+++ b/src/main/resources/assets/stupidthings/lang/zh_cn.lang
@@ -10,7 +10,7 @@ item.paper_bag_hat.name=纸袋帽
 item.rubber.name=橡胶
 item.rubber_raw.name=生橡胶
 item.smoke_bomb.name=烟雾炸弹
-item.target_chestplate.name=靶子
+item.target_chestplate.name=靶子胸甲
 item.rubber_chicken.name=尖叫鸡
 item.propeller_hat.name=竹蜻蜓帽
 item.pocket_sand.name=袋装沙子
